Introduce a way to scope resources to the owner of the provided JWT
