# dnd5esheets/front/openapi.json
@@ -28,7 +28,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ]
       }
     },
     "/api/character/{slug}": {
@@ -839,6 +844,17 @@
           "type": {
             "title": "Error Type",
             "type": "string"
+          }
+        }
+      }
+    },
+    "securitySchemes": {
+      "OAuth2PasswordBearer": {
+        "type": "oauth2",
+        "flows": {
+          "password": {
+            "scopes": {},
+            "tokenUrl": "token"
           }
         }
       }
